# beefirst

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  user_registration_api.md
_bmad-output/analysis/: brainstorming-session-2026-01-10.md
_bmad-output/implementation-artifacts/: 1-1-project-structure-dependencies.md  1-2-docker-compose-database-setup.md  1-3-fastapi-app-openapi-docs.md  1-4-readme-architecture-documentation.md  2-1-domain-registration-service-port-interfaces.md  2-2-postgresql-repository-email-claim.md  2-3-console-email-sender-adapter.md  2-4-register-api-endpoint.md  3-1-domain-state-machine-verification-logic.md  3-2-postgresql-repository-verify-activate.md  3-3-activate-api-endpoint-basic-auth.md  3-4-timing-safe-error-responses.md  4-1-registration-expiration-60-second-timeout.md  4-2-account-lockout-3-failed-attempts.md  4-3-credential-purge-data-stewardship.md  4-4-email-release-re-registration.md  5-1-unit-tests-domain-logic.md  5-2-integration-tests-repository.md  5-3-adversarial-tests-security-invariants.md  5-4-coverage-reporting-ci-configuration.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-beefirst-2026-01-10.md
migrations/: 001_create_registrations.sql
src/: __init__.py
src/adapters/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  models.py  routes.py  schemas.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  exceptions.py  ports.py  registration.py
tests/: __init__.py  conftest.py
tests/adversarial/: __init__.py  conftest.py  test_brute_force.py  test_race_conditions.py  (+1 more)
(+34 files in other folders)
